<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="18dp"
        android:text="@string/ExerciseName"
        android:textColor="@android:color/holo_green_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/showExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginStart="74dp"
        android:layout_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/MuscleType"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:id="@+id/showMuscleType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/showExerciseName"
        android:layout_alignTop="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Sets"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/textView8" />

    <TextView
        android:id="@+id/showExerciseSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView10"
        android:layout_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Reps"
        android:textColor="@android:color/holo_green_dark"
        android:layout_above="@+id/textView14"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginStart="18dp" />

    <TextView
        android:id="@+id/showExerciseReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView12"
        android:layout_toEndOf="@+id/textView12"
        android:layout_alignStart="@+id/showMuscleType" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/RestTime"
        android:textColor="@android:color/holo_green_dark"
        android:layout_below="@+id/textView10"
        android:layout_alignStart="@+id/textView10" />

    <TextView
        android:id="@+id/showExerciseRestTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView14"
        android:layout_toEndOf="@+id/textView12" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/textView14"
        android:layout_marginTop="21dp"
        android:id="@+id/space2" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/space2" />
</RelativeLayout>